syntax = "proto3";

option csharp_namespace = "Discount.gRPC.Protos";

package discount;

service DiscountProtoService {
	rpc GetDiscount(GetDiscountRequest) returns (CouponModel);
	rpc CreateDiscount(CreateDiscountResponse) returns (CouponModel);
	rpc UpdateDiscount(UpdateDiscountResponse) returns (CouponModel);
	rpc DeleteDiscount(DeleteDiscountRequest) returns (DeleteDiscountResponse);
}

message GetDiscountRequest {
	string productName = 1;
}

message CreateDiscountResponse {
	CouponModel coupon = 1;
}

message UpdateDiscountResponse {
	CouponModel coupon = 1;
}

message DeleteDiscountRequest {
	string productName = 1;
}

message DeleteDiscountResponse {
	bool success = 1;
}

message CouponModel {
	int32 Id = 1;
	string productName = 2;
	string description = 3;
	int32 amount = 4;
}